feat(secret): Use free-form attributes for secret references
Replace fixed mount/path locator fields with a provider-specific attributes
map so different secret backends can pass their own locator parameters.

Co-authored-by: Cursor <cursoragent@cursor.com>